fix: fix the contacts overflow

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -109,11 +109,12 @@
 		display: flex;
 		flex-flow: column nowrap;
 		margin-top: 21px;
+		word-break: break-word;
 		row-gap: 10px;
 
 		@include desktop {
 			grid-column: 4 / 5;
-			grid-row: 1 / 2;
+			grid-row: 1 / 3;
 			margin-top: 0;
 		}
 	}
